--- a/src/components/FormMedicament.css
+++ b/src/components/FormMedicament.css
@@ -17,6 +17,7 @@
     color:#fff;
     text-align: center;
     letter-spacing: 0.0625rem;
+    margin-top: 10vh;
 }
 .modal h4,h6{
     color: rgba(242,135,55);
@@ -113,7 +114,7 @@
     overflow: hidden;
     top: 0;
     left: 0;
-    background: rgba(242,135,55,0.75);
+    background: rgba(40,180,192,0.45);
     z-index: 1;
 }
 
