--- a/src/components/MyPillbox.css
+++ b/src/components/MyPillbox.css
@@ -5,6 +5,10 @@
     text-align: center;
     margin : 20px auto;
 }
+.pillboxP{
+    text-align: center;
+    margin-bottom: 20px;
+}
 .medListContainer{
     margin: auto;
     
