--- a/src/components/BurgerMenu.css
+++ b/src/components/BurgerMenu.css
@@ -7,11 +7,11 @@
 }
  
 .bm-burger-bars {
-  background: orange;
+  background: #F28737;
 }
 
 .bm-burger-bars-hover {
-  background: grey;
+  background:#F28737;
 }
 
 .bm-cross-button {
@@ -20,7 +20,7 @@
 }
  
 .bm-cross {
-  background: black;
+  background: #5C6B73;
 }
 
 .bm-menu-wrap{
