--- a/src/components/MyPillbox.css
+++ b/src/components/MyPillbox.css
@@ -1,5 +1,8 @@
 .pillbox{
   width: 100%;
+  display : flex;
+  flex-direction: column;
+  align-content: center;
 }
 .pillboxH2{
     text-align: center;
@@ -28,12 +31,18 @@
   flex-direction: column;
   justify-content: center;
 }
-
+.buttonPillbox{
+  width: 100px;
+  margin : 20px auto;
+}
 .medList {
   color: red;
 }
+.med{
+  margin : 30px;
+}
 .medList2{
-  margin : 10px auto;
+  margin : 20px auto;
 }
 .medRed{
   color : red;
