--- a/src/components/MyPillbox.css
+++ b/src/components/MyPillbox.css
@@ -4,10 +4,28 @@
   flex-direction: column;
   align-content: center;
 }
-.pillboxH2{
-    text-align: center;
-    margin : 20px auto;
+.pillboxH1{
+    /* text-align: center;
+    margin : 20px auto; */
+    margin-top: 0;
+    margin-bottom: 40px;
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    text-shadow: 1px 1px 2px #5C6B73;
+    line-height: 2;
+    font-size: 2.5em;
+    margin-right: -23px;
 }
+
+
+.bannierePill {
+    width: 100%;
+    text-align: center;
+    background-color: #30d3e2b9;
+    height: 87px;
+}
+
 .pillboxP{
     text-align: center;
     margin-bottom: 20px;
