--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,16 @@
 
 
 h1{
-  font-weight: 500;
+  font-weight: 600;
   text-transform: capitalize;
-  margin-top: 13vh;
+  font-size: 2.5em;    
+  color: #fff;
+  text-shadow: 1px 1px 2px #5C6B73;
+  margin-top: 2vh;
+  margin-left: 5vh;
+  text-align: center;
 }
+
 
 .App-link {
   color: #F28737;
