--- a/src/components/FormMedicament.css
+++ b/src/components/FormMedicament.css
@@ -38,19 +38,19 @@
     border-radius: 0.4375rem;
     padding-bottom: 10%;
     position: absolute;
-    top: 235px;
-    height: 576px;
+    top: 225px;
+    height: 600px;
 }
 .modal h4,h6{
     color: rgba(242,135,55);
 }
 .modal__close {
     position: absolute;
-    top: .3rem;
-    right: .5rem;
+    top: .15rem;
+    right: .4rem;
     display: inline-block;
     font-size: 1.7em;
-    color:#F28737;
+    color:#C2DFE3;
     padding: 0px 2px;
 }
 .modal__close:hover {
@@ -59,13 +59,13 @@
 }
 .modal__header h3{
     font-size: 2rem;
-    margin: 30px 0px 0px 0px;
+    margin: 35px 0px 0px 0px;
     text-align: center;
     line-height: 32px;
     color: #fff;
     text-decoration: none;
     font-weight: 600;
-    text-shadow: 1px 1px 2px #5C6B73;
+    text-shadow: 1px 0px 1px #5C6B73;
     line-height: 2;
 }
 .modal__description {
@@ -100,7 +100,7 @@
     text-align: center;
     text-transform: uppercase;
     position: absolute;
-    bottom: -109px;
+    bottom: -110px;
     left: -31vw;
     width: 160px;
     height: 70px;
