--- a/src/components/MyTreatment.css
+++ b/src/components/MyTreatment.css
@@ -1,17 +1,28 @@
-.banniere {
-    width: 100%;
-    text-align: center;
-    background-color: #30d3e2b9;
-    height: 87px;
-}
-
 .container-more{
     display: flex;
     width: 100%;
     flex-direction: column;
-    margin-top: 30px;
 }
 
+.container-more .banniere {
+    box-shadow: 0px 1px 2px #28B4C0;
+    width: 100%;
+    text-align: center;
+    background-color: #30d3e2b9;
+    height: 87px;
+    text-align: center;
+  }
+  
+/* .container-more .banniere .myTreatment {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 600;
+    text-shadow: 1px 1px 2px #5C6B73;
+    line-height: 2;
+    font-size: 2.5em;
+    margin-right: -23px;
+}
+   */
 .container-more ul {
     text-align:center ;
     font-size: 1.5em;
@@ -84,17 +95,7 @@
     margin-top: 12px;
 }
 
-.myTreatment {
-    margin-top: 0;
-    margin-bottom: 40px;
-    color: #fff;
-    text-decoration: none;
-    font-weight: 600;
-    text-shadow: 1px 1px 2px #5C6B73;
-    line-height: 2;
-    font-size: 2.5em;
-    margin-right: -23px;
-}
+
 /* .li button {
     height: 45px;
     width: 45px;
